ref nsg/base-nsg.json
{
            "comments": "Generalized from resource: '/subscriptions/d83e2a57-3aa1-40bc-a380-e45e2fd7e500/resourceGroups/ahm-developer-westus-rg/providers/Microsoft.Network/networkSecurityGroups/ahm-developer-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_ahm_developer_nsg_name')]",
            "apiVersion": "2016-03-30",
            "location": "westus",
            "tags": {
                "project": "ahm",
                "deployedBy": "kfitzgerald@digitalaviationservices.com",
                "deploymentDate": "02/08/2017 20:16:19",
                "deploymentSource": "manual"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-ssh-ingress-from-devops-dmz",
                        "properties": {
                            "description": "Allow SSH from devops dmz subnet into the developer workstation subnet port 22",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "10.44.6.96/28",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-rdp-ingress-from-devops-dmz",
                        "properties": {
                            "description": "Allow RDP from devops dmz subnet into the developer workstation subnet port 3389",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "10.44.6.96/28",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "deny-all-ingress",
                        "properties": {
                            "description": "Only the ports listed above should be allowed from all networks",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-https-egress-to-public",
                        "properties": {
                            "description": "Allow egress https to public",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-ssh-egress-to-virtualnetwork",
                        "properties": {
                            "description": "Allow egress to command line linux boxes, dev,test",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "192.168.0.0/16",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-http-egress-to-public",
                        "properties": {
                            "description": "Allow egress http to public",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-smtp-egress-to-public",
                        "properties": {
                            "description": "Allow egress SMTP to public",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "25",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-discovery-egress-to-public",
                        "properties": {
                            "description": "Allow egress msservice to public port 6380",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6380",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-ldap-egress-to-devops-ad-subnet",
                        "properties": {
                            "description": "Allow egress LDAP to devops ad subnet port 389, both tcp and udp for domain join",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "389",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.44.1.160/27",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-dns-egress-to-devops-ad-subnet",
                        "properties": {
                            "description": "Allow egress DNS to devops ad subnet port 53",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.44.1.160/27",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-ssl-ldap-egress-to-devops-ad-subnet",
                        "properties": {
                            "description": "Allow egress SSL+LDAP to devops ad subnet port 686",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "686",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.44.1.160/27",
                            "access": "Allow",
                            "priority": 700,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-all-egress-to-specfic-public-ips",
                        "properties": {
                            "description": "Allow all egress to 192.168.X.X",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "192.168.0.0/16",
                            "access": "Allow",
                            "priority": 800,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-ad-realm-communication",
                        "properties": {
                            "description": "Allow ad realm communication",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3268",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.44.1.160/27",
                            "access": "Allow",
                            "priority": 900,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-smb-communication-for-ad-join",
                        "properties": {
                            "description": "Allow smb communication to support ad join",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "445",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.44.1.160/27",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-kerberos-for-ad-join",
                        "properties": {
                            "description": "Allow kerberos for ad join",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "88",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.44.1.160/27",
                            "access": "Allow",
                            "priority": 1100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-kerberos-for-linux-passwd",
                        "properties": {
                            "description": "Allow linux passwd using kerberos",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "464",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.44.1.160/27",
                            "access": "Allow",
                            "priority": 1150,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-ad-rpc-endpoint-mapper",
                        "properties": {
                            "description": "Allow AD RPC negition port for windows login",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "135",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.44.1.160/27",
                            "access": "Allow",
                            "priority": 1200,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-ad-ephemeral-rpc",
                        "properties": {
                            "description": "Allows AD RPC ports for windows login",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "49152-65535",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.44.1.160/27",
                            "access": "Allow",
                            "priority": 1300,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-ntp-time",
                        "properties": {
                            "description": "Allow ntp time",
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1400,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-ssh-kitchen",
                        "properties": {
                            "description": "Allow ssh for kitchen",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 1500,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-winrm-kitchen",
                        "properties": {
                            "description": "Allow kitchen to do winrm",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5985-5986",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 1600,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "deny-all-egress",
                        "properties": {
                            "description": "Only the ports listed above should be allowed from all networks",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4000,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "SSH-toVirtial",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "0-65535",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 1550,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Oracle-To-Virtual",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1521",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 1700,
                            "direction": "Outbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        }
